# odoo_tutorial

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
custom_addons/estate/: __manifest__.py
custom_addons/estate/models/: estate_property.py
custom_addons/estate/views/: estate_menus.xml  estate_property_views.xml
